2007-04-01  Richard Dale  <rdale@foton.es>

	* Replace transparent proxies to invoke methods, with a direct call to 
	  'SmokeInvocation.Invoke()' to invoke a method in the Smoke library.
	  Performance is now 20x better than two weeks ago for a test consisting
	  of 5 goes at the cannon game with force 40. The new method to call a 
	  method in the Smoke library looks like this:

		public object Invoke(	string mungedName, 
								string signature, 
								Type returnType, 
								params object[] args );

	  Where the 'params' object[] argument is a list of arg type/arg value pairs.

	  An example of calling it:

		public QPoint(int xpos, int ypos) : this((Type) null) {
			CreateProxy();
			interceptor.Invoke(	"QPoint$$", 
								"QPoint(int, int)", 
								typeof(void), 
								typeof(int), xpos, typeof(int), ypos);
		}


2007-03-27  Richard Dale  <rdale@foton.es>

	* When a reference in the weak reference map is found to be dead, remove
	  it from the map
	* Fixed bug in debugging logging where weak refs were wrongly being
	  labelled as dead

2007-03-26  Richard Dale  <rdale@foton.es>

	* Before an entry was removed from the weak reference map, a check was
	  made to see if it was still there. But the check always returned 0
	  because the reference was a dead weak reference, and so no entries
	  were ever removed causing a memory leak
	* Tidied up the code to call the C# delegate pointers directly, rather
	  than via C wrapper functions, which didn't really do anything useful
	* The 'CreateInstance()' method is now passed a pointer to a 
	  smokeqyoto_object instance

2007-03-25  Richard Dale  <rdale@foton.es>

	* Tidy up the caching the slot and signal type signatures and removed
	  duplicated code. The signal signatures are no longer obtained every
	  time is signal is emitted, but got from a cache in a dictionary.

2007-03-25  Arno Rehn  <arno@arnorehn.de>

	* If a object is destroyed, don't call any methods on it anymore (fixes